PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015, PHP 7.0.1

- Standard:
  . Fixed bug #70808 (array_merge_recursive corrupts memory of unset items).
    (laruence)

- XSL:
  . Fixed bug #70678 (PHP7 returns true when false is expected). (Felipe)


29 Oct 2015, PHP 7.0.0 RC 6

- Core:
  . Fixed bug #70785 (Infinite loop due to exception during identical
    comparison). (Laruence)
  . Fixed bug #70748 (Segfault in ini_lex () at Zend/zend_ini_scanner.l).
    (Laruence)
  . Fixed bug #70689 (Exception handler does not work as expected). (Laruence)
  . Fixed bug #70430 (Stack buffer overflow in zend_language_parser()). (Nikita)
  . Fixed bug #70782 (null ptr deref and segfault (zend_get_class_fetch_type)).
    (Nikita)

- Opcache:
  . Fixed bug #70724 (Undefined Symbols from opcache.so on Mac OS X 10.10).
    (Laruence)

- PDO_DBlib:
  . Fixed bug #69757 (Segmentation fault on nextRowset).
    (miracle at rpz dot name)

- SPL:
  . Fixed bug #70730 (Incorrect ArrayObject serialization if unset is called
    in serialize()). (Laruence)

- SOAP:
  . Fixed bug #70715 (Segmentation fault inside soap client). (Laruence)
  . Fixed bug #70709 (SOAP Client generates Segfault). (Laruence)

15 Oct 2015, PHP 7.0.0 RC 5

- Core:
  . Fixed bug #70630 (Closure::call/bind() crash with ReflectionFunction->
    getClosure()). (Dmitry, Bob)
  . Fixed bug #70662 (Duplicate array key via undefined index error handler).
    (Nikita)
  . Fixed bug #70681 (Segfault when binding $this of internal instance method
    to null). (Nikita)
  . Fixed bug #70685 (Segfault for getClosure() internal method rebind with
    invalid $this). (Nikita)

- Mcrypt:
  . Fixed bug #70625 (mcrypt_encrypt() won't return data when no IV was
    specified under RC4). (Nikita)

- Opcache:
  . Fixed compatibility with Windows 10 (see also bug #70652). (Anatol)

- Phpdbg: