@@ -2,9 +2,13 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2015, PHP 7.0.1
 
+- Opcache:
+  . Fixed bug #70656 (require() statement broken after opcache_reset() or a
+    few hours of use). (Laruence)
+
 - Standard:
   . Fixed bug #70808 (array_merge_recursive corrupts memory of unset items).
-    (laruence)
+    (Laruence)
 
 - XSL:
   . Fixed bug #70678 (PHP7 returns true when false is expected). (Felipe)
